--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,6 @@ body {
 /* HEADER */
 
 .header {
-   padding: 24px 0;
    border-bottom: 1px solid #e7e9fc;
 }
 
@@ -104,6 +103,30 @@ body {
    font-style: normal;
    color: var(--clr-navy-blue);
    text-decoration: none;
+}
+
+.header__menu-link {
+   position: relative;
+   display: block;
+   padding: 24px 0;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header__menu-link::after {
+   content: '';
+   position: absolute;
+   bottom: -1px;
+   left: 0;
+   width: 100%;
+   height: 4px;
+   background-color: transparent;
+   border-radius: 4px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header__menu-link:hover::after,
+.header__menu-link:focus::after {
+   background-color: var(--clr-ocean);
 }
 
 .header__menu-link:hover,
