--- a/css/styles.css
+++ b/css/styles.css
@@ -375,6 +375,26 @@ body {
    column-gap: 24px;
 }
 
+.projects__item:hover .project__item-cover-text {
+   transform: translateY(0);
+}
+
+.projects__item-wrapper {
+   position: relative;
+   overflow: hidden;
+}
+
+.project__item-cover-text {
+   position: absolute;
+   top: 0;
+   height: 100%;
+   padding: 40px 32px;
+   color: var(--clr-cloud);
+   background-color: var(--clr-iris);
+   transform: translateY(100%);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .projects__item:hover,
 .projects__item:focus {
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
