--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ ul {
    --clr-light-slate: #8e8f99;
    --clr-cornflower: #e7e9fc;
    --clr-cloud: #f4f4fd;
+   --clr-dairy: #fcfcfc;
    --clr-navy-blue-modal: rgba(46, 47, 66, 0.4);
    --clr-grey: rgba(46, 47, 66, 0.7);
 }
@@ -524,4 +525,45 @@ body {
 
 .footer__icon {
    fill: #ffffff;
+}
+
+/* MODAL */
+
+.backdrop {
+   position: fixed;
+   top: 0;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(48, 48, 48, 0.445);
+}
+
+.modal {
+   width: 406px;
+   min-height: 576px;
+   padding: 24px;
+   background-color: var(--clr-dairy);
+   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+   border-radius: 4px;
+}
+
+.modal-close {
+   display: block;
+   margin-left: auto;
+   padding: 0;
+   line-height: 0;
+   width: 24px;
+   height: 24px;
+   border-radius: 50%;
+   background: #e7e9fc;
+   border: 1px solid rgba(0, 0, 0, 0.1);
+   cursor: pointer;
+}
+
+.is-hidden {
+   opacity: 0;
+   visibility: hidden;
+   pointer-events: none;
 }
