--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,8 @@ body {
 }
 
 .header__menu-item {
+   position: relative;
+   padding: 24px 0;
    margin: 0 40px 0 0;
    font-weight: 500;
    font-size: 16px;
@@ -97,6 +99,17 @@ body {
    margin: 0;
 }
 
+.header__menu-item.active::after {
+   content: '';
+   position: absolute;
+   bottom: -1px;
+   left: 0;
+   width: 100%;
+   height: 4px;
+   background-color: var(--clr-iris);
+   border-radius: 4px;
+}
+
 .header__menu-item a,
 .header__contacts-item a {
    font-family: inherit;
@@ -107,27 +120,7 @@ body {
 }
 
 .header__menu-link {
-   position: relative;
-   display: block;
-   padding: 24px 0;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header__menu-link::after {
-   content: '';
-   position: absolute;
-   bottom: -1px;
-   left: 0;
-   width: 100%;
-   height: 4px;
-   background-color: transparent;
-   border-radius: 4px;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header__menu-link:hover::after,
-.header__menu-link:focus::after {
-   background-color: var(--clr-ocean);
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header__menu-link:hover,
@@ -139,6 +132,7 @@ body {
    font-weight: 400;
    letter-spacing: 0.02em;
    color: var(--clr-slate);
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header__contacts-link:hover,
@@ -196,6 +190,7 @@ body {
    border: none;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    border-radius: 4px;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero__button:hover,
@@ -321,6 +316,7 @@ body {
    height: 40px;
    background-color: var(--clr-iris);
    border-radius: 50%;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .our-team__item-soc-link:hover,
@@ -357,6 +353,7 @@ body {
    border: 1px solid #e7e9fc;
    border-radius: 4px;
    cursor: pointer;
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter__button:hover,
@@ -376,7 +373,8 @@ body {
    column-gap: 24px;
 }
 
-.projects__item:hover .project__item-cover-text {
+.projects__item a:hover .project__item-cover-text,
+.projects__item a:focus .project__item-cover-text {
    transform: translateY(0);
 }
 
@@ -450,6 +448,7 @@ body {
    padding: 16px 32px;
    border: 1px solid #8e8f99;
    border-radius: 4px;
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers__link:hover,
@@ -464,6 +463,7 @@ body {
 
 .customers__icon {
    fill: #afb1b8;
+   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* FOOTER */
@@ -516,6 +516,7 @@ body {
    height: 40px;
    background-color: var(--clr-iris);
    border-radius: 50%;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer__link:hover,
